--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,9 @@
     font-family: Arial, Helvetica, sans-serif;
     
 }
-.inicio{
-    flex-direction: column;
+.container1{
     justify-content: center;
-    margin-left: 2rem;
-    
+    align-content: space-between;
 }
 h1{
     color: rgb(226, 43, 107);
@@ -19,14 +17,20 @@ h1{
     margin-bottom: 2rem;
     margin-top: 2.5rem;
 }
+.inicio{
+     margin-left: 2rem;
+    padding: 2rem;
+    justify-content: center;
+    align-content: space-between;
+    
+}
 
 .container_input{
     display: flex;
-    justify-content: space-between;
     border-bottom: solid 5px rgb(30, 194, 88);
     width: 40%;
     height: 20%;
-    align-content: center;
+    
 }
 .input{
     outline: none;
@@ -48,7 +52,6 @@ h1{
 .container{
     width: 100%;
     display: flex;
-    /*flex-direction: column;*/
     justify-content: center;
 }
 .container_tareas{
@@ -56,7 +59,7 @@ h1{
     border: 3px solid black;
     border-radius: 10px;
     width: 40%;
-    height: 80vh;
+    height: 70vh;
     margin-top: 1rem;
     text-align: center;
     background: linear-gradient(
