--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     
 }
-.container1{
-    justify-content: center;
-    align-content: space-between;
-}
+
 h1{
     color: rgb(226, 43, 107);
     text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
@@ -25,29 +22,24 @@ h1{
     
 }
 
-.container_input{
-    display: flex;
-    border-bottom: solid 5px rgb(30, 194, 88);
-    width: 40%;
-    height: 20%;
+
     
-}
-.input{
-    outline: none;
-    border: 0;
-    width: 100%;
-    font-size: 1rem;
-}
-.btn_todo{
+
+.btn_input{
     padding: 10px;
     background: rgb(14, 177, 192);
     color: white;
     cursor: pointer;
     outline: none;
 }
-.btn_todo:hover{
+.btn_input:hover{
     background: rgb(69, 101, 231);
 }
+
+
+
+
+
 /*contenedor de la lista de tareas*/
 .container{
     width: 100%;
@@ -104,16 +96,27 @@ h2{
     margin-left: 0.5rem;
     
 }
-.btn-eliminar{
+.container_list_boton{
+    cursor: pointer;
+    
+}
+.btn-submit{
     font-size: 1.5rem;
     padding: 5px;
     background: none;
     border: none;
-    cursor: pointer;
+    
 }
-.fa-regular{
-    color: rgb(43, 0, 255);
+.fa-arrow-right{
+    color: rgb(255, 0, 144);
+    margin-right: 0.5rem;
+    
 }
+/*Hasta acá listado de tareas ingresadas*/
+
+
+
+
 .container_completadas{
     flex-direction: column;
     border: 3px solid black;
@@ -148,5 +151,11 @@ p{
     color: rgb(238, 229, 229);
     text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
     font-size: 1rem;
+}
+.btn-delete{
+    font-size: 1.5rem;
+    padding: 5px;
+    background: none;
+    border: none;
 }
 
